# ForgeURL

./: .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml  railway.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controller/: create_url.rs  delete_url.rs  get_analytics.rs  get_url.rs  mod.rs  search_url.rs  update_url.rs
frontend/: Cargo.toml  index.html
frontend/assets/css/: custom_styles.css
frontend/src/: api.rs  main.rs
frontend/src/components/: footer.rs  mod.rs  navbar.rs  recent_links_item.rs
frontend/src/pages/: about.rs  api_docs.rs  dashboard.rs  home.rs  mod.rs  not_found.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/types/: mod.rs
