[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { path = "../shared" }
sqlite = "0.37.0"
tokio = {version = "1.50.0" , features = ["full"]}
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "forgeurl"
path = "src/main.rs"