[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "=0.4.64"
web-sys = { version = "=0.3.91", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "HtmlInputElement",
    "Navigator",
    "Clipboard"
]}
js-sys = "=0.3.91"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = "0.2"
shared = { path = "../shared" }